syntax = "proto3";

package clientproto;

enum MethodType {
    CONNECT = 0;
    SUBSCRIBE = 1;
    UNSUBSCRIBE = 2;
    PUBLISH = 3;
    PRESENCE = 4;
    PING = 5;
}

message Command {
    MethodType type = 1;
    bytes data = 2;
}

message Error {
    uint32 code = 1;
    string message = 2;
}

message Reply {
    uint32 id = 1;
    Error error = 2;
    bytes result = 3;
}


enum EventType {
    PUBLICATION = 0;
    JOIN = 1;
    LEAVE = 2;
    SERVICE = 4;
}

message Event {
    EventType type = 1;
    bytes data = 2;
}

message ClientInfo {
    string id = 1;
    bytes data = 2;
}

message Publication {
    string topic = 1;
    string channel = 2;
    bytes data = 3;
    ClientInfo info = 4;
}

message Join {
    string channel = 1;
    ClientInfo data = 2;
}

message Leave {
    string channel = 1;
    ClientInfo data = 2;
}


message SubscribeRequest {
    string channel = 1;
    string signature = 2;
    ClientInfo data = 3;
}

message UnsubscribeRequest {
    string channel = 1;
}

message PublishRequest {
    string channel = 1;
    bytes data = 2;
}

enum ClientType {
    JS = 0;
    SWIFT = 1;
}

message ConnectRequest {
    ClientType client = 2;
    string version = 3;
    bytes data = 4;
}

message PingRequest {
}

message PingResult {

}

message ConnectResult {
    string uid = 1;
    int64 expires = 3;
    bytes data = 4;
}

message SubscribeResult {
    string channel = 1;
}

message UnsubscribeResult {
}

message PublishResult {
}

message PresenceRequest {
    string channel = 1;
}

message PresenceResult {
    map<string, ClientInfo> presence = 1;
}